fix: keep admin sidebar visible until tablet breakpoint

--- a/client/src/components/AdminSidebar/AdminSidebar.module.scss
+++ b/client/src/components/AdminSidebar/AdminSidebar.module.scss
@@ -417,7 +417,7 @@
   }
 }
 
-@media (max-width: 1120px) {
+@media (max-width: 1023px) {
   .adminSidebar {
     position: static;
     min-height: auto;
